--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       MYSQL_USER: "user"
       MYSQL_PASSWORD: "user"
       MYSQL_DATABASE: "project"
+    ports:
+        - "3306:3306"
     networks:
       - project-net
     volumes:
