--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "ext-json": "*",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/passport": "^10.4",
-        "ext-json": "*"
+        "spatie/laravel-query-builder": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
